# cynk-sdk-c

./: CMakeLists.txt  README.md  SPEC.md
examples/: basic_device.c  quick_start.c
examples/esp32/: CMakeLists.txt
examples/esp32/main/: main.c
include/: cynk.h  cynk_device.h
scripts/: amalgamate.sh
src/: cynk.c  cynk_device.c  cynk_protocol.c
src/internal/: cynk_platform.h  cynk_protocol.h  cynk_types.h
src/platform/: mqtt_esp.c  mqtt_mosquitto.c
tests/: test_device.c
